--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,7 @@ TODO: Приклад коментара
   margin: 0 30px 0 0;
   color: white;
   text-transform: uppercase;
+  font-size: 44px;
 }
 
 @media (max-width: 767px) {
@@ -264,6 +265,7 @@ TODO: Приклад коментара
     padding: 100px 0 0 20px;
     -webkit-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
+    overflow: auto;
   }
   .header__menu.active {
     top: 0;
